Fix(#23)  Delete icon was not centered.

--- a/src/components/building-anomaly-detail-pictures/building-anomaly-detail-pictures.scss
+++ b/src/components/building-anomaly-detail-pictures/building-anomaly-detail-pictures.scss
@@ -1,18 +1,7 @@
 building-anomaly-detail-pictures {
-  .block {
-    position: relative;
-    .deleteIcon {
-      padding-left: 4px;
-      padding-right: 0px;
-      position: absolute !important;
-      right: 5px;
-    }
-    .deleteIcon:before {
-      font-size: 30px !important;
-      background-color: white;
-    }
-    .button[icon-only]{
-      min-width: 2em;
-    }
+  button.deleteIcon{
+    position: absolute;
+    right: 14px;
+    background: white;
   }
 }
